--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,5 @@
 body {
-	font: 12px Times, Sans-Serif;
+	font: 12px Helvetica, Sans-Serif;
 }
 
 #button {
@@ -12,10 +12,10 @@ body {
 }
 
 #header {
-	width: 800px;
+	width: 1200px;
 	margin: 40px auto 60px;
 }
-#name {
+#my-name {
 	margin: 0 0 16px 0;
 	padding: 0 0 16px 0;
 	font-size: 42px;
