--- a/resume.css
+++ b/resume.css
@@ -24,6 +24,15 @@ body {
 	border-bottom: 1px solid #999;
 }
 
+#summary {
+	width: 400px;
+	margin: 0 0 16px 0;
+	padding: 0 0 32px 0;
+
+	font-style: bold;
+	font-size: 20px;
+}
+
 #problem-solver-preventer {
 	width: 800px;
 	margin: 40px auto 60px;
@@ -37,14 +46,6 @@ body {
 #education {
 	width: 800px;
 	margin: 40px auto 60px;
-}
-
-#summary {
-	margin: 0 0 16px 0;
-	padding: 0 0 32px 0;
-
-	font-style: italic;
-	font-size: 20px;
 }
 
 #company-school-name {
