--- a/resume.css
+++ b/resume.css
@@ -13,15 +13,14 @@ body {
 
 #header {
 	width: 1200px;
-	margin: 40px auto 60px;
+	margin-top: 40px;
+	margin-left: 0px;
 }
 #my-name {
-	margin: 0 0 16px 0;
-	padding: 0 0 16px 0;
 	font-size: 40px;
 	font-weight: bold;
 	letter-spacing: -2px;
-	border-bottom: 1px solid #999;
+	border-bottom: 2px solid #999;
 }
 
 #summary {
