--- a/resume.css
+++ b/resume.css
@@ -2,21 +2,13 @@ body {
 	font: 16px Helvetica, Sans-Serif;
 }
 
-#button {
-	margin-left: 40%;
-	margin-right: 40%;
-	background-color: #213862;
-
-	border-radius: 15px;
-	height: 100px;
-}
-
 #header {
 	width: 1200px;
 	margin-top: 40px;
 	margin-left: 0px;
 }
 #my-name {
+	margin-left: 0px;
 	font-size: 40px;
 	font-weight: bold;
 	letter-spacing: -2px;
