--- a/resume.css
+++ b/resume.css
@@ -7,6 +7,12 @@ body {
 	margin-top: 40px;
 	margin-left: 0px;
 }
+
+#section-header {
+	font-size:  32px;
+	font-style: bold;
+}
+
 #my-name {
 	margin-left: 0px;
 	font-size: 40px;
