--- a/resume.css
+++ b/resume.css
@@ -2,15 +2,16 @@ body {
 	font: 16px Helvetica, Sans-Serif;
 }
 
-#header {
+#name-contact-header {
 	width: 1200px;
 	margin-top: 40px;
 	margin-left: 0px;
 }
 
 #section-header {
-	font-size:  32px;
+	font-size:  20px;
 	font-style: bold;
+	border-bottom: 1px solid #999;
 }
 
 #my-name {
