--- a/resume.css
+++ b/resume.css
@@ -2,7 +2,7 @@ body {
 	font: 16px Helvetica, Sans-Serif;
 }
 
-#name-contact-header {
+#name-header {
 	width: 400px;
 	margin-top: 40px;
 	margin-left: 0px;
