--- a/resume.css
+++ b/resume.css
@@ -27,9 +27,8 @@ body {
 
 #summary {
 	width: 400px;
-	margin: 0 0 16px 0;
-	padding: 0 0 32px 0;
-
+	margin-left: 60px;
+	margin-top: 100px;
 	font-style: bold;
 	font-size: 16px;
 }
