--- a/resume.css
+++ b/resume.css
@@ -2,9 +2,23 @@ body {
 	font: 16px Helvetica, Sans-Serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
+/* Create three unequal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+.left, .right {
+  width: 25%;
+}
+
+.middle {
+  width: 50%;
 }
 
 /* Clear floats after the columns */
