--- a/resume.css
+++ b/resume.css
@@ -10,7 +10,7 @@ body {
 .column {
   float: left;
   padding: 10px;
-  vertical-align: top;
+  vertical-align: text-top;
 }
 .resume-name {
   width: 20%;
