--- a/resume.css
+++ b/resume.css
@@ -13,15 +13,15 @@ body {
   vertical-align: text-top;
 }
 .resume-name {
-  width: 20%;
+  width: 120px;
   height: 80px;
 }
 .resume-contact-left {
-  width: 20%;
+  width: 100px;
   height: 80px;
 }
 .resume-contact-right {
-  width: 20%;
+  width: 100px%;
   height: 80px;
 }
 .summary {
@@ -79,7 +79,8 @@ body {
 }
 
 h3 {
-	border-bottom: 1px solid #999;
+	font-size: 20px;
+	border-bottom: 2px solid #999;
 }
 
 h4{
