--- a/resume.css
+++ b/resume.css
@@ -65,6 +65,7 @@ body {
   font-size: 20px;
   font-style: bold;
   border-bottom: 2px solid #000000;
+  border-spacing:  0px;
 }
 
 #company-school-name {
@@ -82,6 +83,7 @@ body {
 h3 {
 	font-size: 20px;
 	border-bottom: 2px solid #000000;
+	border-spacing: 0px;
 }
 
 h4{
