--- a/resume.css
+++ b/resume.css
@@ -38,13 +38,13 @@ body {
   width: 35%;
   height: 1000px;
 }
-.professional-experience-full {
-  width: 60%;
-  height: 1000px;
-}
 .education {
   width: 25%;
   height: 300px;
+}
+.professional-experience-full {
+  width: 60%;
+  height: 1000px;
 }
 /* clears the floats after the columns */
 .row:after {
@@ -73,10 +73,12 @@ body {
 
 #company-school-name {
 	font-size: 20px;
+	font-style:  bold;
 }
 
 #job-title-degree {
 	font-size: 20px;
+	font-style: bold
 }
 
 .date {
@@ -85,6 +87,7 @@ body {
 
 h3 {
 	font-size: 20px;
+	font-style: bold;
 	border-bottom: 2px solid #000000;
 	border-spacing: 0px;
 }
