--- a/resume.css
+++ b/resume.css
@@ -56,17 +56,17 @@ body {
 /*display properties for resume sections*/
 #my-name {
   font-size: 40px;
-  font-style: bold;
+  font-weight: bold;
 }
 
 #my-contact {
   font-size: 12px;
-  font: bold;
+  font-weight: bold;
 }
 
 #section-header {
   font-size: 20px;
-  font: bold;
+  font-weight: bold;
   border-bottom: 2px solid #000000;
   border-spacing:  0px;
 }
@@ -78,7 +78,7 @@ body {
 
 #job-title-degree {
 	font-size: 20px;
-	font: bold
+	font-weight: bold
 }
 
 .date {
@@ -87,7 +87,7 @@ body {
 
 h3 {
 	font-size: 20px;
-	font: bold;
+	font-weight: bold;
 	border-bottom: 2px solid #000000;
 	border-spacing: 0px;
 }
