--- a/resume.css
+++ b/resume.css
@@ -11,6 +11,8 @@ body {
   float: left;
   padding: 10px;
   vertical-align: text-top;
+  border: 2px solid black;
+  overflow: hidden;
 }
 .resume-name {
   width: 25%;
