--- a/resume.css
+++ b/resume.css
@@ -42,7 +42,7 @@ body {
   width: 25%;
   height: 300px;
   border: 2px solid black;
-  overflow: hidden;
+  overflow: auto;
 
 }
 .professional-experience-full {
