--- a/resume.css
+++ b/resume.css
@@ -9,7 +9,8 @@ body {
 /* Create column types for the resume section layouts that will float next to each other */
 .column {
   float: left;
-  padding: 10px;
+  padding-left: 10px;
+  padding-top: 0px;
   vertical-align: text-top;
 }
 .resume-name {
