--- a/resume.css
+++ b/resume.css
@@ -48,6 +48,8 @@ body {
 .professional-experience-narrow {
   width: 35%;
   height: 300px;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
 }
 .education {
   width: 25%;
@@ -58,6 +60,9 @@ body {
 .professional-experience-full {
   width: 60%;
   height: 1000px;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
 }
 /* clears the floats after the columns */
 .row:after {
@@ -80,7 +85,7 @@ body {
 #section-header {
   font-size: 20px;
   font-weight: bold;
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px solid black;
   border-spacing:  0px;
 }
 
@@ -101,7 +106,7 @@ body {
 h3 {
 	font-size: 20px;
 	font-weight: bold;
-	border-bottom: 2px solid #000000;
+	border-bottom: 2px solid black;
 	border-spacing: 0px;
 }
 
