--- a/resume.css
+++ b/resume.css
@@ -13,6 +13,7 @@ body {
   padding-left: 10px;
   padding-top: 0px;
   vertical-align: text-top;
+  margin-top: 2px;
 }
 .resume-name {
   width: 25%;
