--- a/resume.css
+++ b/resume.css
@@ -19,18 +19,23 @@ body {
   width: 25%;
   height: 80px;
   border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  border-left: 2px solid black;
   overflow: auto;
 }
 .resume-contact-left {
   width: 15%;
   height: 80px;
   border-bottom: 2px solid black;
+  border-top: 2px solid black;
   overflow: auto;
 }
 .resume-contact-right {
   width: 20%;
   height: 80px;
   border-bottom: 2px solid black;
+  border-top: 2px solid black;
+  border-right: 2px solid black;
   overflow: auto;
 }
 .summary {
