--- a/resume.css
+++ b/resume.css
@@ -13,7 +13,10 @@ body {
   padding-left: 10px;
   padding-top: 10px;
   vertical-align: text-top;
-  margin-top: 2px;
+  margin-top: 6px;
+  margin-left: 6px;
+  margin-right:  6px;
+  margin-bottom: 6px;
 }
 .resume-name {
   width: 25%;
