--- a/resume.css
+++ b/resume.css
@@ -10,7 +10,10 @@ body {
 /* Create column types for the resume section layouts that will float next to each other */
 .column {
   float: left;
-  padding: 0px 0px 0px 0px;
+  padding-left: 6px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right: 6px;
   vertical-align: text-top;
   margin-top: 6px;
   margin-left: 6px;
@@ -24,6 +27,7 @@ body {
   border-top: 2px solid black;
   border-left: 2px solid black;
   overflow: auto;
+  margin-right: 0px;
 }
 .resume-contact-left {
   width: 15%;
@@ -31,6 +35,8 @@ body {
   border-bottom: 2px solid black;
   border-top: 2px solid black;
   overflow: auto;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .resume-contact-right {
   width: 20%;
@@ -39,6 +45,7 @@ body {
   border-top: 2px solid black;
   border-right: 2px solid black;
   overflow: auto;
+  margin-left: 0px;
 }
 .summary {
   width: 15%;
