--- a/resume.css
+++ b/resume.css
@@ -67,6 +67,7 @@ body {
   height: 300px;
   border-top: 2px solid black;
   border-left: 2px solid black;
+  margin-bottom: 0px;
 }
 .education {
   width: 25%;
@@ -80,6 +81,7 @@ body {
   border-left: 2px solid black;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
+  margin-top: 0px;
 }
 /* clears the floats after the columns */
 .row:after {
