--- a/resume.css
+++ b/resume.css
@@ -68,12 +68,14 @@ body {
   border-top: 2px solid black;
   border-left: 2px solid black;
   margin-bottom: 0px;
+  margin-right: 0px;
 }
 .education {
   width: 25%;
   height: 300px;
   border: 2px solid black;
   overflow: auto;
+  margin-left: 0px;
 }
 .professional-experience-full {
   width: 60%;
