--- a/resume.css
+++ b/resume.css
@@ -76,6 +76,7 @@ body {
   border: 2px solid black;
   overflow: auto;
   margin-left: 0px;
+  margin-bottom: 0px;
 }
 .professional-experience-full {
   width: 60%;
@@ -99,7 +100,7 @@ body {
 }
 
 #my-contact {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: bold;
 }
 
@@ -134,6 +135,7 @@ h3 {
 h4{
 	margin-top: 0px;
 	margin-bottom: 0px;
+	font-size: 16px;
 }
 
 p {
