--- a/resume.css
+++ b/resume.css
@@ -51,7 +51,7 @@ body {
 .summary {
   width: 15%;
   height: 600px;
-  padding: 25px;
+  /*padding: 25px;*/
   border: 2px solid black;
   overflow: auto;
 }
@@ -125,11 +125,19 @@ body {
 	float: right;
 }
 
+h1 {
+	font-weight: bold;
+	border-bottom: 2px solid black;
+	border-spacing: 0px;
+	padding: 0px 0px 0px 0px;
+}
+
 h3 {
 	font-size: 24px;
 	font-weight: bold;
 	border-bottom: 2px solid black;
 	border-spacing: 0px;
+	padding: 0px 0px 0px 0px;
 }
 
 h4{
