--- a/resume.css
+++ b/resume.css
@@ -127,8 +127,8 @@ body {
 
 h1 {
 	font-weight: bold;
-	border-bottom: 2px solid black;
-	border-spacing: 0px;
+	/*border-bottom: 2px solid black;
+	border-spacing: 0px;*/
 	padding: 0px 0px 0px 0px;
 }
 
