--- a/resume.css
+++ b/resume.css
@@ -15,10 +15,10 @@ body {
   padding-bottom: 0px;
   padding-right: 6px;
   vertical-align: text-top;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right:  0px;
-  margin-bottom: 0px;
+  margin-top: 6px;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-bottom: 6px;
 }
 .resume-name {
   width: 25%;
@@ -28,7 +28,7 @@ body {
   border-left: 2px solid black;
   overflow: auto;
   margin-right: 0px;
-  margin-top: 10px;
+  padding-top: 10px;
   padding-left: 6px;
 }
 .resume-contact-left {
