--- a/resume.css
+++ b/resume.css
@@ -15,10 +15,10 @@ body {
   padding-bottom: 0px;
   padding-right: 6px;
   vertical-align: text-top;
-  margin-top: 6px;
-  margin-left: 6px;
-  margin-right: 6px;
-  margin-bottom: 6px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 .resume-name {
   width: 25%;
@@ -154,6 +154,8 @@ h4{
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-size: 20px;
+	padding: 0px 0px 0px 0px;
+	margin: 0px 0px 0px 0px;
 }
 
 p {
