--- a/resume.css
+++ b/resume.css
@@ -178,5 +178,8 @@ h4{
 
 p {
   color: black;
-  margin: 0px 0px 0px 0px;
+  margin-top: 0px;
+  margin-bottom: 4px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
