--- a/resume.css
+++ b/resume.css
@@ -56,10 +56,11 @@ body {
   overflow: auto;
   margin: 0px 0px 0px 0px;
 }
-.problem-solver-preventer {
+.project-showcase {
   width: 45%;
   height: 600px;
-  padding: 0px;
+  padding-left: 6px;
+  padding-top: 6px;
   border: 2px solid black;
   overflow: auto;
   margin: 0px 0px 0px 0px;
