--- a/resume.css
+++ b/resume.css
@@ -119,6 +119,12 @@ body {
   max-width:  6%;
   max-height: 6%;
 }
+#graph {
+  float: right;
+  overflow: auto;
+  max-width:  10%;
+  max-height: 10%;
+}
 
 #my-name {
   font-size: 54px;
