--- a/resume.css
+++ b/resume.css
@@ -184,11 +184,18 @@ h3 {
 }
 
 h4{
-  margin-top: 0px;
-  margin-bottom: 0px;
   font-size: 20px;
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
+}
+
+h6{
+  font-size: 16px;
+  padding: 0px 0px 0px 0px;
+  margin-top: 0px;
+  margin-bottom: 4px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 p {
