--- a/resume.css
+++ b/resume.css
@@ -125,6 +125,13 @@ body {
   max-height: 6%;
   margin: 0px 10px;
 }
+#icon-univ {
+  float: left;
+  overflow: auto;
+  max-width:  50%;
+  max-height: 50%;
+  margin: 0px 10px;
+}
 #graph1 {
   float: right;
   overflow: auto;
