--- a/resume.css
+++ b/resume.css
@@ -128,9 +128,12 @@ body {
 #icon-univ {
   float: left;
   overflow: auto;
-  max-width:  50%;
-  max-height: 50%;
-  margin: 0px 10px;
+  max-width:  35%;
+  max-height: 35%;
+  margin-left: 0px;
+  margin-right: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 #graph1 {
   float: right;
