--- a/resume.css
+++ b/resume.css
@@ -143,7 +143,7 @@ body {
   margin: 0px 10px;
 }
 #graph2 {
-  float: left;
+  float: right;
   overflow: auto;
   max-width:  30%;
   max-height: 30%;
