--- a/resume.css
+++ b/resume.css
@@ -153,8 +153,8 @@ body {
 }
 
 #my-name {
-  font-size: 54px;
-  font-size: calc(32px + (66 - 32) * ((100vw - 300px) / (1600 - 300)));
+  /*font-size: 54px;*/
+  font-size: calc(12px + (66 - 12) * ((100vw - 300px) / (1600 - 300)));
   font-weight: bold;
   margin: 0px 0px 0px 0px;
 }
